--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
       <!-- fine jumbo -->
 
       <!-- inizio main business -->
+
+      <!-- card Singolo -->
+
       <section class="business">
         <div class="container">
           <div class="business-top">
@@ -90,7 +93,9 @@
           <div class="row">
             <div class="col-1-3">
               <div class="card border-gray">
-                <div class="card-head">Singolo</div>
+                <div class="card-head">
+                  <i class="fa-solid fa-user"></i> Singolo
+                </div>
 
                 <nav class="card-content">
                   <ul>
@@ -99,11 +104,15 @@
                     <li>/mese</li>
                   </ul>
                   <ul>
-                    <li>1 utente</li>
-                    <li>5tb di spazio di archiviazione<br />sicuro</li>
+                    <li><i class="fa-solid fa-user"></i> 1 utente</li>
                     <li>
-                      Funzioni di produttività premium e condivisione file
-                      semplice e <br />sicura
+                      <i class="fa-solid fa-folder"></i> 5tb di spazio di
+                      archiviazione<br />sicuro
+                    </li>
+                    <li>
+                      <i class="fa-solid fa-share-nodes"> </i> Funzioni di
+                      produttività premium e condivisione file semplice e
+                      <br />sicura
                     </li>
                     <li>
                       <button class="bt-grande-blu">
@@ -111,37 +120,31 @@
                       </button>
                     </li>
                     <li>oppure <a href="#">acquista ora</a></li>
+                    <li class="light-gray">______</li>
                   </ul>
                   <ul>
                     <li><b>Punti salienti del piano</b></li>
                     <li>
-                      <i class="fa-solid fa-check" style="color: #74c0fc"></i
-                      >Invia file fino a 100GB con DropBox Transfert
+                      <i class="fa-solid fa-check"></i>Invia file fino a 100GB
+                      <br />
+                      con DropBox Transfert
                     </li>
                     <li>
-                      <i class="fa-solid fa-check" style="color: #74c0fc"></i
-                      >Cartelle line su dispositivi mobili
-                    </li>
-                    <li>
-                      <i class="fa-solid fa-check" style="color: #74c0fc"></i
-                      >Risparmio del 50% rispetto alle iscrizioni singole
-                    </li>
-                    <li>
-                      <i class="fa-solid fa-check" style="color: #74c0fc"></i
-                      >Possibilità di inserire nuovi membri del team
-                    </li>
-                    <li>
-                      <i class="fa-solid fa-check" style="color: #74c0fc"></i
-                      >Gestione dei permessi in base ai ruoli
+                      <i class="fa-solid fa-check"></i>Cartelle offine su
+                      dispositivi <br />
+                      mobili
                     </li>
                   </ul>
                 </nav>
               </div>
             </div>
+            <!-- card Advanced -->
 
             <div class="col-1-3">
               <div class="card border-gray">
-                <div class="card-head">Team</div>
+                <div class="card-head">
+                  <i class="fa-solid fa-users"></i> Team
+                </div>
                 <nav class="card-content">
                   <ul>
                     <li><h3>Advanced</h3></li>
@@ -150,11 +153,15 @@
                   </ul>
 
                   <ul>
-                    <li>3 o più utenti</li>
-                    <li>Tutto lo spazio di cui ha bisogno il tuo team</li>
+                    <li><i class="fa-solid fa-users"></i> 3 o più utenti</li>
                     <li>
-                      Sofisticate funzioni di controllo e per tenere al sicuro
-                      tutti i file del<br />
+                      <i class="fa-solid fa-folder"></i> Tutto lo spazio di cui
+                      ha bisogno il tuo team
+                    </li>
+                    <li>
+                      <i class="fa-solid fa-share-nodes"></i> Sofisticate
+                      funzioni di controllo e per tenere al sicuro tutti i file
+                      del<br />
                       tuo team
                     </li>
                     <li>
@@ -163,83 +170,115 @@
                       </button>
                     </li>
                     <li>oppure <a href="#">acquista ora</a></li>
+                    <li class="light-gray">______</li>
                   </ul>
                   <ul>
                     <li><b>Punti salienti del piano</b></li>
                     <li>
-                      <i class="fa-solid fa-check" style="color: #74c0fc"></i
-                      >Nessun limite di spazio per i file
+                      <i class="fa-solid fa-check"></i>Nessun limite di spazio
+                      per i file
                     </li>
                     <li>
-                      <i class="fa-solid fa-check" style="color: #74c0fc"></i
-                      >Cartelle offline su Dispositivi <br />mobili
+                      <i class="fa-solid fa-check"></i>Cartelle offline su
+                      Dispositivi <br />mobili
                     </li>
                     <li>
-                      <i class="fa-solid fa-check" style="color: #74c0fc"></i
-                      >Risparmio del 50% rispetto alle iscrizioni singole
+                      <i class="fa-solid fa-check"></i>Risparmio del 50%
+                      rispetto alle <br />
+                      iscrizioni singole
                     </li>
                     <li>
-                      <i class="fa-solid fa-check" style="color: #74c0fc"></i>
-                      Possibilità di inserire nuovi membri del team
+                      <i class="fa-solid fa-check"></i>
+                      Possibilità di inserire nuovi <br />
+                      membri del team
+                    </li>
+                    <li>
+                      <i class="fa-solid fa-check"></i>Gestione dei permessi in
+                      base ai <br />ruoli
                     </li>
                   </ul>
                 </nav>
               </div>
             </div>
+            <!-- card Azienda -->
 
             <div class="col-1-3">
               <div class="card border-gray">
-                <div class="card-head">Singolo</div>
+                <div class="card-head">
+                  <i class="fa-solid fa-building"></i> Azienda
+                </div>
                 <nav class="card-content">
                   <ul>
-                    <li><h3>Professional</h3></li>
+                    <li><h3>Enterprise</h3></li>
                     <li><b>€ 12.00</b></li>
                     <li>/mese</li>
                   </ul>
 
                   <ul>
-                    <li>1 utente</li>
-                    <li>5tb di spazio di archiviazione<br />sicuro</li>
+                    <li>
+                      <i class="fa-solid fa-building"></i> 10 o più utenti
+                    </li>
+                    <li>
+                      <i class="fa-solid fa-folder"></i> Soluzioni
+                      personalizzabili per la <br />
+                      tua azienda
+                    </li>
+                    <li>
+                      <i class="fa-solid fa-share-nodes"> </i> Assistenza
+                      personalizzata per <br />
+                      aiutaare gli amministratori in una <br />
+                      gestione su larga scala
+                    </li>
                     <li>
                       <button class="bt-grande-blu">
                         Prova gratis per 30 giorni
                       </button>
                     </li>
                     <li>oppure <a href="#">acquista ora</a></li>
+                    <li class="light-gray">______</li>
                   </ul>
                   <ul>
                     <li><b>Punti salienti del piano</b></li>
                     <li>
-                      <i class="fa-solid fa-check" style="color: #74c0fc"></i
-                      >Invia file fino a 100GB con DropBox Transfert
+                      <i class="fa-solid fa-check"></i>Cartelle offiline su
+                      dispositivi <br />
+                      mobili
                     </li>
                     <li>
-                      <i class="fa-solid fa-check" style="color: #74c0fc"></i
-                      >Cartelle offline su dispositivi mobili
+                      <i class="fa-solid fa-check"></i>Servizio e assistenza h24
+                    </li>
+                    <li>
+                      <i class="fa-solid fa-check"></i>Possibilità di
+                      personaizzazione totale
                     </li>
                   </ul>
                 </nav>
               </div>
             </div>
           </div>
+
+          <!-- carta-team-bottom -->
+
           <section class="card-bottom border-gray">
             <div class="row">
               <div class="col-1-1">
-                <div class="card-head">Team</div>
+                <div class="card-head">
+                  <i class="fa-solid fa-users"></i> Team
+                </div>
                 <div class="bottom-business">
                   <h3 class="inline">
+                    <br />
                     Enterprise
-
-                    <p><br />Lorem ipsum dolor sit amet.</p>
+                    <p>Contatta l'ufficio vendite per i prezzi.</p>
                   </h3>
                   <button class="bt-grande-blu">
                     Contatta l'ufficio vendite
                   </button>
                 </div>
-
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Veritatis, officia.
+                  Soluzioni personalizzate e supporto su misura per aiutare i
+                  professionisti IT nella gestiuone <br />
+                  su qualsiasi scala.
                 </p>
               </div>
             </div>
