fine correzione card bottom

--- a/index.html
+++ b/index.html
@@ -266,20 +266,19 @@
                   <i class="fa-solid fa-users"></i> Team
                 </div>
                 <div class="bottom-business">
-                  <h3 class="inline">
-                    <br />
-                    Enterprise
-                    <p>Contatta l'ufficio vendite per i prezzi.</p>
-                  </h3>
-                  <button class="bt-grande-blu">
-                    Contatta l'ufficio vendite
-                  </button>
+                  <div class="office-contact">
+                    <h3 class="inline">Enterprise</h3>
+                    <button class="bt-grande-blu">
+                      Contatta l'ufficio vendite
+                    </button>
+                  </div>
+                  <h4>Contatta l'ufficio vendite per i prezzi</h4>
+                  <p>
+                    Soluzioni personalizzate e supporto su misura per aiutare i
+                    professionisti IT nella gestiuone <br />
+                    su qualsiasi scala.
+                  </p>
                 </div>
-                <p>
-                  Soluzioni personalizzate e supporto su misura per aiutare i
-                  professionisti IT nella gestiuone <br />
-                  su qualsiasi scala.
-                </p>
               </div>
             </div>
           </section>
