--- a/index.html
+++ b/index.html
@@ -297,13 +297,15 @@
             </div>
             <div class="col40">
               <h2>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                Placeat, ipsam.
+                Entra in contatto con un <br />
+                partner Dropbox
               </h2>
               <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Recusandae nobis quas sapiente suscipit, beatae voluptatem fuga
-                deserunt eum laudantium consequuntur.
+                Trova un partner Dropbox e HelloSign <br />di fiducia. Ottieni
+                le soluzioni e i servizi <br />
+                necessari per raggiungere i tuoi obiettivi <br />
+                aziendali,tra cui implementazione, <br />
+                integrazione,gestione e supporto <br />continui.
               </p>
               <button class="bt-grande-bianco">Trova un partner</button>
             </div>
@@ -463,7 +465,10 @@
           <div class="row">
             <div class="col-20">
               <div class="hr">_____________</div>
-              <div>Italiano</div>
+              <div class="light-gray">
+                <i class="fa-solid fa-earth-americas"></i> Italiano
+                <i class="fa-solid fa-caret-up"></i>
+              </div>
             </div>
           </div>
         </section>
