--- a/index.html
+++ b/index.html
@@ -405,7 +405,10 @@
 
       <section class="client">
         <div class="container">
-          <h2>Più di 500.000 team utilizzano Dropbox business</h2>
+          <h2>
+            Più di 500.000 team utilizzano <br />
+            Dropbox business
+          </h2>
           <a href="#">Scopri di più sui nostri clienti</a>
         </div>
       </section>
